--- a/random-jokes/index.html
+++ b/random-jokes/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Random Jokes</title>
 	<!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-	<link rel="shortcut icon" href="funny.png" />	
+	<link rel="icon" href="assets/images/funny.png" type="image/gif" sizes="16x16">
 	<!-- Adding reference to font awesome -->
 	<link rel="stylesheet" href="assets/vendor/font/fontawesome-all.css">
 	<!-- Default style-sheet is for 'media' type screen (color computer display).  -->
