Styling adjusted for random jokes app

--- a/random-jokes/index.html
+++ b/random-jokes/index.html
@@ -14,25 +14,29 @@
 	<link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
 <body>
-	<div class="container">
-		<!-- Start of the header -->
-		<header>
-			<div class="loader">
-				<img src="assets/images/DotCircles.gif" alt="loading..."/>
-			</div>
-		</header>
-		<!-- end of header -->
-		<!-- Start of main -->
-		<main>
-			<ul id="datalist" class="mainlist">				
+	<!-- Start of the header -->
+	<header>
+		<div class="loader">
+			<img src="assets/images/DotCircles.gif" alt="loading..."/>
+		</div>
+	</header>
+	<!-- end of header -->
+	<!-- Start of main -->
+	<main>
+		<div class="container">
+			<h1>Random Jokes</h1>
+			<figure class="random-jokes-icon">
+				<img src="assets/images/funny.png" alt="Random Jokes">
+			</figure>
+			<ul id="datalist" class="mainlist">
 			</ul>
-		</main>
-		<!-- End of main -->
-		<!-- start of footer -->
-		<footer>			
-		</footer>
-		<!-- end of footer -->
-	</div>
+		</div>
+	</main>
+	<!-- End of main -->
+	<!-- start of footer -->
+	<footer>			
+	</footer>
+	<!-- end of footer -->
 	<script src="assets/vendor/jquery-1.8.3.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
