--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<!-- Setting the viewport for Media Query -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Framework</title>
+	<title>Weather Forecast</title>
 	<!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-	<link rel="shortcut icon" href="favicon.ico" />	
+	<link rel="icon" href="weather-favicon.png" type="image/gif" sizes="16x16">
 	<!-- Adding jQuery Weather Animation Links  -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
@@ -43,20 +43,19 @@
 			<!-- Main HTML Data -->
 			<div class="inputdetails">
 				<form action="#FIXME" method="GET">
-					<input type="search" id="inpcity" placeholder="City, Country">
-					<button type="submit" id="citytextbtn">Weather Info</button>
+					<input type="search" id="inpcity" placeholder="City, Country"><button type="submit" id="citytextbtn">Weather Info</button>
 				</form>
 			</div>
 
 			<div class="weatherdetails">
-				<div id="WeatherInfo">
+				<div id="WeatherInfo" class="weather-info">
 					<h2>Weather Information</h2>
 					<p id="location">City, Country</p>
 					<p id="weather">Cloudy</p>
 					<p id="temperature">31 &deg;</p>
 					<p id="desc">Description</p>
 				</div>			
-				<div id="WeatherForecast">
+				<div id="WeatherForecast" class="weather-forecast">
 					<h2>Weather Forecast</h2>
 					<div>
 						<span class="weather-pts" id="r1c1">XXX</span>
