--- a/random-jokes/index.html
+++ b/random-jokes/index.html
@@ -7,9 +7,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Random Jokes</title>
 	<!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-	<link rel="icon" href="assets/images/funny.png" type="image/gif" sizes="16x16">
-	<!-- Adding reference to font awesome -->
-	<link rel="stylesheet" href="assets/vendor/font/fontawesome-all.css">
+	<link rel="icon" href="assets/images/funny.png" type="image/gif" sizes="16x16">	
 	<!-- Default style-sheet is for 'media' type screen (color computer display).  -->
 	<link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
@@ -37,7 +35,7 @@
 	<footer>			
 	</footer>
 	<!-- end of footer -->
-	<script src="assets/vendor/jquery-1.8.3.min.js"></script>
+	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
