--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drink Water</title>
-    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Drink Water</p>
@@ -27,6 +28,6 @@
         <div class="cup cup-small">250 ml</div>
         <div class="cup cup-small">250 ml</div>
     </div>
-    <script src="assets/scripts/app.js"></script> 
+    <script src="app.js"></script> 
 </body>
 </html>
