--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -6,7 +6,7 @@
     <title>Password Generator</title>
 	<link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -43,6 +43,6 @@
     </div>
     
 
-    <script src="assets/scripts/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
