--- a/rotating-navigation/index.html
+++ b/rotating-navigation/index.html
@@ -13,9 +13,7 @@
         <div class="circle-container">
             <div class="circle">
                 <button id="close">
-                    <i class="fas fa-times">
-
-                    </i>
+                    <i class="fas fa-times"></i>
                 </button>
                 <button id="open">
                     <i class="fas fa-bars"></i>
@@ -33,9 +31,9 @@
     </div>
     <nav>
         <ul>
-            <li><i class="fas fa-home"></i> Home</li>
-            <li><i class="fas fa-user-alt"></i> About</li>
-            <li><i class="fas fa-envelope"></i> Contact</li>
+            <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fas fa-user-alt"></i> About</a></li>
+            <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
     </nav>
     <script src="app.js"></script>
