--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -49,6 +49,7 @@
             </div>
         </div>
     </main>
+    <script src="env.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
