--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -14,41 +14,7 @@
             <input type="text" id="search" class="search" placeholder="Search">
         </form>
     </header>
-    <main id="main">
-        <div class="movie">
-            <img src="movie-screen.jpg" alt="Movie Seats">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="green">9.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum impedit deserunt hic eum aliquam accusantium beatae tenetur sequi ipsa ex?</p>
-            </div>
-        </div>
-        <div class="movie">
-            <img src="movie-screen.jpg" alt="Movie Seats">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="orange">9.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum impedit deserunt hic eum aliquam accusantium beatae tenetur sequi ipsa ex?</p>
-            </div>
-        </div>
-        <div class="movie">
-            <img src="movie-screen.jpg" alt="Movie Seats">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="red">3.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum impedit deserunt hic eum aliquam accusantium beatae tenetur sequi ipsa ex?</p>
-            </div>
-        </div>
-    </main>
+    <main id="main"></main>
     <script src="env.js"></script>
     <script src="app.js"></script>
 </body>
