movies-app ui improved. code optimised

--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <header>
-        <form id="form">
-            <input type="text" id="search" class="search" placeholder="Search">
-        </form>
+        <h1><a href="./index.html">Movies App</a></h1>
+        <nav>
+            <a href="./index.html" class="nav-link">Home</a>
+            <form id="form">
+                <input type="search" id="search" class="search" placeholder="Search">
+            </form>
+        </nav>
     </header>
     <main id="main"></main>
     <script src="env.js"></script>
