weather-forecast app code optimised

--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -26,7 +26,7 @@
 	<main>
 		<div class="wrapper">
 			<div class="inputdetails">
-				<form action="#WeatherInfo" method="GET">
+				<form id="weatherInfoForm" method="GET">
 					<input type="search" id="inpcity" placeholder="City, Country"><button type="submit" id="citytextbtn">Weather Info</button>
 				</form>
 			</div>
