music-player static ui created

--- a/music-player/index.html
+++ b/music-player/index.html
@@ -9,7 +9,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Music Player</h1>
+    <div class="player-container">
+        <!-- Song -->
+        <div class="img-container">
+            <img src="img/ArabicKuthu.jpg" alt="Album Art">
+        </div>
+        <h2 id="title">Arabic Kuthu | Beast</h2>
+        <h3 id="artist">Anirudh Ravichander, Jonita Gandhi</h3>
+        <audio src="music/ArabicKuthu.mp3"></audio>
+        <!-- Progress -->
+        <div class="progress-container" id="progress-container">
+            <div class="progress" id="progress"></div>
+            <div class="duration-wrapper">
+                <span id="current-time">0.00</span>
+                <span id="duration">4:39</span>
+            </div>
+        </div>
+        <!-- Controls -->
+        <div class="player-controls">
+            <i class="fas fa-backward" id="prev" title="Previous"></i>
+            <i class="fas fa-play main-button" id="play" title="Play"></i>
+            <i class="fas fa-forward" id="next" title="Next"></i>
+        </div>
+    </div>
+    <!-- Script -->
     <script src="app.js"></script>
 </body>
 </html>
