light-dark-mode Responsive UI updated

--- a/light-dark-mode/index.html
+++ b/light-dark-mode/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-- Navigation -->
-    <button class="nav-btn open-btn">
+    <!-- <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
-    </button>
+    </button> -->
     <nav id="nav" class="nav">
         <!-- Dark Mode Switch -->
         <div class="theme-switch-wrapper">
@@ -25,6 +25,9 @@
                 <div class="slider round"></div>
             </label>
         </div>
+        <button class="nav-btn open-btn">
+            <i class="fas fa-bars"></i>
+        </button>
         <button class="nav-btn close-btn">
             <i class="fas fa-times"></i>
         </button>
