--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rock, Paper, Scissors</title>
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="style.css">
   <script src="app.js" defer></script>
 </head>
