Created Calculator theme with different color styling

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" id="theme" href="theme.css" disabled>
 </head>
 <body>
     <!-- Calculator -->
     <div class="calculator">
+        <!-- Theme Button -->
+        <a href="#" id="toggle-theme-btn" class="toggle-theme-btn"><i class="fas fa-brush"></i></a>
         <!-- Display -->
         <div class="calculator-display">
             <h1>0</h1>
