Calculator Light Theme and Dark Theme setting updated with LocalStorage

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,7 +16,7 @@
     <!-- Calculator -->
     <div class="calculator">
         <!-- Theme Button -->
-        <a id="toggle-theme-btn" class="toggle-theme-btn" title="Change Theme"><i class="fas fa-brush"></i></a>
+        <a id="toggle-theme-btn" class="toggle-theme-btn" title="Change Theme"><i class="fas fa-sun"></i></a>
         <!-- Display -->
         <div class="calculator-display">
             <h1>0</h1>
