--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -26,7 +26,7 @@
 		<div class="wrapper">
 			<div class="inputdetails">
 				<form id="weatherInfoForm" method="GET">
-					<input type="search" id="inpcity" placeholder="City, Country"><button type="submit" id="citytextbtn"><i class="fas fa-search-location"></i></button>
+					<input type="search" id="inpcity" placeholder="City, Country"><button type="submit" id="citytextbtn" title="Weather Info"><i class="fas fa-search-location"></i></button>
 				</form>
 			</div>
 			<div class="weatherdetails">
