--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -1,27 +1,15 @@
 <!doctype html>
-<!-- If multi-language site, reconsider usage of html lang declaration here. -->
 <html lang="en"> 
 <head>
 	<meta charset="utf-8">
-	<!-- Setting the viewport for Media Query -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<title>Weather Forecast</title>
-	<!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
 	<link rel="icon" href="weather-favicon.png" type="image/gif" sizes="16x16">
-	<!-- Adding jQuery Weather Animation Links  -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-	<!-- Default style-sheet is for 'media' type screen (color computer display).  -->
 	<link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
-<body id="weather-background" class="default-weather">
-	<!-- Start of the header -->
-	<header>
-	</header>
-	<!-- end of header -->
-	<!-- Start of main -->
+<body>
 	<main>
 		<div class="wrapper">
 			<div class="inputdetails">
@@ -77,12 +65,6 @@
 			</div>
 		</div>
 	</main>
-	<!-- End of main -->
-	<!-- start of footer -->
-	<footer>			
-	</footer>
-	<!-- end of footer -->
-	<!-- External Script for animated background -->
 	<script src="assets/vendor/jquery-1.8.3.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
