--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="percentage" id="percentage">%</div>
     </div>
-    <p class="text">Select how many glasses of water that you drank?</p>
+    <p class="text">How much water did you drink?</p>
     <div class="cups">
         <div class="cup cup-small">250 ml</div>
         <div class="cup cup-small">250 ml</div>
