--- a/text-voice/index.html
+++ b/text-voice/index.html
@@ -13,7 +13,10 @@
       <h1>Text To Voice</h1>
       <div id="text-box" class="text-box">
         <textarea id="text" placeholder="Enter text to read..."></textarea>
-        <button class="btn" id="read">Read Text</button>
+        <div class="btn-container">
+          <button class="btn read-text-btn" id="read" title="Read Text">Read Text</button>
+          <button class="btn stop-voice-btn" id="stop-voice-btn" title="Stop Voice">Stop Voice</button>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
