text-voice styling updated

--- a/text-voice/index.html
+++ b/text-voice/index.html
@@ -15,7 +15,7 @@
         <textarea id="text" placeholder="Enter text to read..."></textarea>
         <div class="btn-container">
           <button class="btn read-text-btn" id="read" title="Read Text">Read Text</button>
-          <button class="btn stop-voice-btn" id="stop-voice-btn" title="Stop Voice">Stop Voice</button>
+          <button class="btn stop-voice-btn hide" id="stop-voice-btn" title="Stop Voice">Stop Voice</button>
         </div>
       </div>
     </div>
