text-voice multiple voice language options added

--- a/text-voice/index.html
+++ b/text-voice/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <h1>Text To Voice</h1>
       <div id="text-box" class="text-box">
+        <select id="voices"></select>
         <textarea id="text" placeholder="Enter text to read..."></textarea>
         <div class="btn-container">
           <button class="btn read-text-btn" id="read" title="Read Text">Read Text</button>
