--- a/tic-tac-toe-basic/index.html
+++ b/tic-tac-toe-basic/index.html
@@ -10,6 +10,19 @@
 </head>
 <body>
     <section>
+        <select name="themes" id="theme-select" class="theme-select">
+            <option disabled>Select</option>
+            <option value="light" selected>Light</option>
+            <option value="dark">Dark</option>
+            <option value="purple-light">Purple Light</option>
+            <option value="purple-dark">Purple Dark</option>
+            <option value="coffee-light">Coffee Light</option>
+            <option value="coffee-dark">Coffee Dark</option>
+            <option value="rose-light">Rose Light</option>
+            <option value="rose-dark">Rose Dark</option>
+            <option value="blue-light">Blue Light</option>
+            <option value="blue-dark">Blue Dark</option>
+        </select>
         <h1 class="game-title">Tic Tac Toe</h1>
         <div class="game-container">
             <div data-cell-index="0" class="cell"></div>
