--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -16,7 +16,7 @@
 
 		<div class="container">
 			<h2>Your Balance</h2>
-			<h3 id="balalnce" class="balance">$0.00</h3>
+			<h3 id="balance" class="balance">$0.00</h3>
 
 			<div class="inc-exp-container">
 				<div>
@@ -31,19 +31,19 @@
 
 			<h3>History</h3>
 			<ul id="list" class="list">
-				<li class="plus">
+				<!-- <li class="plus">
 					Cash <span>1000</span><button class="delete-btn">x</button>
 				</li>
 				<li class="minus">
 					Food <span>-100</span><button class="delete-btn">x</button>
-				</li>
+				</li> -->
 			</ul>
 
 			<h3>Add New Transaction</h3>
 			<form id="form">
 				<div class="form-control">
 					<label for="text"><b>Transaction Details:</b></label>
-					<input type="text" id="text" placeholder="Enter text..." />
+					<input type="text" id="text" maxlength="50" placeholder="Enter text..." />
 				</div>
 				<div class="form-control">
 					<label for="amount">
