expense-tracker print functionality created

--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 
-			<h3>History</h3>
+			<h3>Transactions History</h3>
 			<ul id="list" class="list">
 				<!-- <li class="plus">
 					Cash <span>1000</span><button class="delete-btn">x</button>
@@ -39,8 +39,8 @@
 				</li> -->
 			</ul>
 
-			<h3>Add New Transaction</h3>
 			<form id="form">
+				<h3>Add New Transaction</h3>
 				<div class="form-control">
 					<label for="text"><b>Transaction Details:</b></label>
 					<input type="text" id="text" maxlength="50" placeholder="Enter text..." />
@@ -53,6 +53,7 @@
 				</div>
 				<button class="btn">Add Transaction</button>
 			</form>
+			<button class="print-btn print-hide" onclick="window.print()">Print</button>
 		</div>
 		<script src="app.js"></script>
 	</body>
