--- a/random-jokes/index.html
+++ b/random-jokes/index.html
@@ -1,25 +1,18 @@
 <!doctype html>
-<!-- If multi-language site, reconsider usage of html lang declaration here. -->
 <html lang="en"> 
 <head>
 	<meta charset="utf-8">
-	<!-- Setting the viewport for Media Query -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Random Jokes</title>
-	<!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
 	<link rel="icon" href="assets/images/funny.png" type="image/gif" sizes="16x16">	
-	<!-- Default style-sheet is for 'media' type screen (color computer display).  -->
 	<link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
 <body>
-	<!-- Start of the header -->
 	<header>
 		<div class="loader">
 			<img src="assets/images/DotCircles.gif" alt="loading..."/>
 		</div>
 	</header>
-	<!-- end of header -->
-	<!-- Start of main -->
 	<main>
 		<div class="container">
 			<h1>Random Jokes</h1>
@@ -28,13 +21,11 @@
 			</figure>
 			<ul id="datalist" class="mainlist">
 			</ul>
+			<div class="btn-container"></div>
 		</div>
 	</main>
-	<!-- End of main -->
-	<!-- start of footer -->
 	<footer>			
 	</footer>
-	<!-- end of footer -->
 	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
