--- a/random-jokes/index.html
+++ b/random-jokes/index.html
@@ -26,6 +26,7 @@
 	</main>
 	<footer>			
 	</footer>
+	<script src="assets/js/text-voice.js"></script>
 	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
