--- a/exchange-rate/index.html
+++ b/exchange-rate/index.html
@@ -77,6 +77,7 @@
           Swap
         </button>
         <div class="rate" id="rate"></div>
+        <div id="updated" class="updated"></div>
       </div>
 
       <div class="currency">
@@ -137,7 +138,7 @@
         <input type="number" id="amount-two" placeholder="0" />
       </div>
     </div>
-    
+
     <script src="app.js"></script>
   </body>
 </html>
