--- a/exchange-rate/index.html
+++ b/exchange-rate/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <img src="currency-exchange.png" alt="" class="money-img" />
       <h1>Exchange Rate Calculator</h1>
-      <p>Choose the currency and the amounts to get the exchange rate</p>
+      <p>Choose the currency and the amounts to get the exchange rate.</p>
 
       <div class="container">
         <div class="currency">
@@ -77,8 +77,10 @@
           <button class="btn" id="swap">
             Swap
           </button>
-          <div class="rate" id="rate"></div>
-          <div id="updated" class="updated"></div>
+          <div>
+            <span class="rate" id="rate"></span>
+            <span id="updated" class="updated"></span>
+          </div>
         </div>
 
         <div class="currency">
