--- a/exchange-rate/index.html
+++ b/exchange-rate/index.html
@@ -13,7 +13,6 @@
       <img src="currency-exchange.png" alt="" class="money-img" />
       <h1>Exchange Rate Calculator</h1>
       <p>Choose the currency and the amounts to get the exchange rate.</p>
-
       <div class="container">
         <div class="currency">
           <select id="currency-one">
@@ -72,7 +71,7 @@
           </select>
           <input type="number" id="amount-one" placeholder="0" value="1" />
         </div>
-
+        <div class="currency-full currency-one"></div>
         <div class="swap-rate-container">
           <button class="btn" id="swap">
             Swap
@@ -82,7 +81,6 @@
             <span id="updated" class="updated"></span>
           </div>
         </div>
-
         <div class="currency">
           <select id="currency-two">
             <option value="AED">AED</option>
@@ -140,6 +138,7 @@
           </select>
           <input type="number" id="amount-two" placeholder="0" />
         </div>
+        <div class="currency-full currency-two"></div>
       </div>
     </div>
     <script src="app.js"></script>
