music-player background color changed according to album cover functionaity added

--- a/music-player/index.html
+++ b/music-player/index.html
@@ -12,7 +12,7 @@
     <div class="player-container">
         <!-- Song -->
         <div class="img-container">
-            <img src="img/ArabicKuthu.jpg" alt="Album Art" draggable="false">
+            <img id="album-cover" src="img/ArabicKuthu.jpg" alt="Album Art" draggable="false">
         </div>
         <h2 id="title">Arabic Kuthu | Beast</h2>
         <h3 id="artist">Anirudh Ravichander, Jonita Gandhi</h3>
