movie-booking dynamic seat booking functionality added

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -11,16 +11,7 @@
   <body>
     <div class="movie-container">
       <label>Pick a movie:</label>
-      <select id="movie">
-        <option value="8">Barbie ($8)</option>
-        <option value="9">Elemental ($9)</option>
-        <option value="12">Oppenheimer ($12)</option>
-        <option value="11">Mission: Impossible 7 ($11)</option>
-        <option value="15">John Wick: Chapter 4 ($15)</option>
-        <option value="7">The Little Mermaid ($7)</option>
-        <option value="10">Guardians of the Galaxy Volume 3 ($10)</option>
-        <option value="13">The Super Mario Bros. Movie ($13)</option>
-      </select>
+      <select id="movie"></select>
     </div>
     <ul class="showcase">
       <li>
@@ -100,7 +91,8 @@
       </div>
     </div>
     <p class="text">
-      You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
+      You have selected <span id="count">0</span> seats for a price of $<span
+        id="total">0</span>
     </p>
     <script src="app.js"></script>
   </body>
