movie-booking seat numbers added

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -30,64 +30,70 @@
     <div class="container">
       <div class="screen"></div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
+        <div class="seat-row">F</div>
+        <div class="seat" id="F1">1</div>
+        <div class="seat" id="F2">2</div>
+        <div class="seat" id="F3">3</div>
+        <div class="seat" id="F4">4</div>
+        <div class="seat" id="F5">5</div>
+        <div class="seat" id="F6">6</div>
+        <div class="seat" id="F7">7</div>
+        <div class="seat" id="F8">8</div>
       </div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
+        <div class="seat-row">E</div>
+        <div class="seat" id="E1">1</div>
+        <div class="seat" id="E2">2</div>
+        <div class="seat" id="E3">3</div>
+        <div class="seat occupied" id="E4">4</div>
+        <div class="seat occupied" id="E5">5</div>
+        <div class="seat" id="E6">6</div>
+        <div class="seat" id="E7">7</div>
+        <div class="seat" id="E8">8</div>
       </div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
+        <div class="seat-row">D</div>
+        <div class="seat" id="D1">1</div>
+        <div class="seat" id="D2">2</div>
+        <div class="seat" id="D3">3</div>
+        <div class="seat" id="D4">4</div>
+        <div class="seat" id="D5">5</div>
+        <div class="seat" id="D6">6</div>
+        <div class="seat occupied" id="D7">7</div>
+        <div class="seat occupied" id="D8">8</div>
       </div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
+        <div class="seat-row">C</div>
+        <div class="seat" id="C1">1</div>
+        <div class="seat" id="C2">2</div>
+        <div class="seat" id="C3">3</div>
+        <div class="seat" id="C4">4</div>
+        <div class="seat" id="C5">5</div>
+        <div class="seat" id="C6">6</div>
+        <div class="seat" id="C7">7</div>
+        <div class="seat" id="C8">8</div>
       </div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
+        <div class="seat-row">B</div>
+        <div class="seat" id="B1">1</div>
+        <div class="seat" id="B2">2</div>
+        <div class="seat" id="B3">3</div>
+        <div class="seat occupied" id="B4">4</div>
+        <div class="seat occupied" id="B5">5</div>
+        <div class="seat" id="B6">6</div>
+        <div class="seat" id="B7">7</div>
+        <div class="seat" id="B8">8</div>
       </div>
       <div class="row">
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat"></div>
+        <div class="seat-row">A</div>
+        <div class="seat" id="A1">1</div>
+        <div class="seat" id="A2">2</div>
+        <div class="seat" id="A3">3</div>
+        <div class="seat" id="A4">4</div>
+        <div class="seat occupied" id="A5">5</div>
+        <div class="seat occupied" id="A6">6</div>
+        <div class="seat occupied" id="A7">7</div>
+        <div class="seat" id="A8">8</div>
       </div>
     </div>
     <p class="text">
