movie-booking responsive styling updated

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -28,7 +28,7 @@
       </li>
     </ul>
     <div class="container">
-      <div class="screen"></div>
+      <div class="screen">SCREEN</div>
       <div class="row">
         <div class="seat-row">F</div>
         <div class="seat" id="F1">1</div>
