--- a/currency-exchange/index.html
+++ b/currency-exchange/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exchange Rate Calculator</title>
+    <title>Currency Exchange</title>
 		<link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
       <img src="currency-exchange.png" alt="" class="money-img" />
-      <h1>Exchange Rate Calculator</h1>
+      <h1>Currency Exchange</h1>
       <p>Select currency and add the amount. </p>
       <div class="container">
         <div class="currency">
