--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css" />
     <title>Movie Booking</title>
   </head>
@@ -100,6 +101,42 @@
       You have selected <span id="count">0</span> seats for a price of $<span
         id="total">0</span>
     </p>
+    <div class="book-btn-container">
+      <button class="book-btn" id="open">Book Ticket</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal-container" id="modal">
+      <div class="modal">
+        <button class="close-btn" id="close">
+          <i class="fa fa-times"></i>
+        </button>
+        <div class="modal-header">
+          <h3>Tickets Booked</h3>
+        </div>
+        <div class="movie-content">
+          <figure>
+            <img src="https://image.tmdb.org/t/p/w1280/qNBAXBIQlnOThrVvA6mA2B5ggV6.jpg" alt="Mario Movie">
+          </figure>
+          <div class="movie-info">
+            <h4 class="title">The Super Mario Bros. Movie</h4>
+            <p><b>Released: </b><span class="released">Wed, 5 Apr, 2023</span></p>
+            <h5>Overview</h5>
+            <p class="overview">While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi.</p>
+            <div class="seats-booked">
+              <h5>Seats Booked</h5>
+              <ul class="seats-booked-ul" id="seats-booked-ul">
+                <li>A3</li>
+                <li>A4</li>
+              </ul>
+            </div>
+            <div class="show-date-time">
+              <p><b>Date: </b><span class="date"></span></p>
+              <p><b>Time: </b><span class="date">9 PM</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
