movie-booking dynamic text added

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -122,6 +122,9 @@
             <p><b>Released: </b><span class="released">Wed, 5 Apr, 2023</span></p>
             <h5>Overview</h5>
             <p class="overview">While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi.</p>
+            <div class="amount-paid">
+              <p><b>Amount Paid: </b><span>$0</span></p>
+            </div>
             <div class="seats-booked">
               <h5>Seats Booked</h5>
               <ul class="seats-booked-ul" id="seats-booked-ul">
