movie-booking added screen number and booking ID. Desktop UI updated

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -122,9 +122,11 @@
             <p><b>Released: </b><span class="released">Wed, 5 Apr, 2023</span></p>
             <h5>Overview</h5>
             <p class="overview">While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi.</p>
+            <h5 class="booking-id" id="booking-id">BOOKING ID: 17802505</h5>
             <div class="amount-paid">
-              <p><b>Amount Paid: </b><span>$0</span></p>
+              <h5><b>Total Amount: </b><span>$0</span></h5>
             </div>
+            <h5 class="screen-number">SCREEN1</h5>
             <div class="seats-booked">
               <h5>Seats Booked</h5>
               <ul class="seats-booked-ul" id="seats-booked-ul">
