movie-booking app: ratings with no of votes info added

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -120,6 +120,7 @@
           <div class="movie-info">
             <h4 class="title">The Super Mario Bros. Movie</h4>
             <p><b>Released: </b><span class="released">Wed, 5 Apr, 2023</span></p>
+            <h5 class="movie-rantings" id="movie-rantings"><i class="fas fa-star"></i>8.6 (4.5K Votes)</h5>
             <h5>Overview</h5>
             <p class="overview">While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi.</p>
             <h5 class="booking-id" id="booking-id">BOOKING ID: 17802505</h5>
