movie-booking app: booking info section added in modal

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -123,22 +123,25 @@
             <h5 class="movie-rantings" id="movie-rantings"><i class="fas fa-star"></i>8.6 (4.5K Votes)</h5>
             <h5>Overview</h5>
             <p class="overview">While working underground to fix a water main, Brooklyn plumbers—and brothers—Mario and Luigi are transported down a mysterious pipe and wander into a magical new world. But when the brothers are separated, Mario embarks on an epic quest to find Luigi.</p>
-            <h5 class="booking-id" id="booking-id">BOOKING ID: 17802505</h5>
-            <div class="amount-paid">
-              <h5><b>Total Amount: </b><span>$0</span></h5>
-            </div>
-            <h5 class="screen-number">SCREEN1</h5>
-            <div class="seats-booked">
-              <h5>Seats Booked</h5>
-              <ul class="seats-booked-ul" id="seats-booked-ul">
-                <li>A3</li>
-                <li>A4</li>
-              </ul>
-            </div>
-            <div class="show-date-time">
-              <p><b>Date: </b><span class="date"></span></p>
-              <p><b>Time: </b><span class="date">9 PM</span></p>
-            </div>
+            <section class="booking-info">
+              <h5 class="booking-id" id="booking-id">BOOKING ID: 17802505</h5>
+              <div class="amount-paid">
+                <h5><b>Total Amount: </b><span>$0</span></h5>
+              </div>
+              <h5 class="title-info" id="title-info"></h5>
+              <h5 class="screen-number">SCREEN1</h5>
+              <div class="seats-booked">
+                <h5>Seats Booked</h5>
+                <ul class="seats-booked-ul" id="seats-booked-ul">
+                  <li>A3</li>
+                  <li>A4</li>
+                </ul>
+              </div>
+              <div class="show-date-time">
+                <p><b>Date: </b><span class="date"></span></p>
+                <p><b>Time: </b><span class="date">9 PM</span></p>
+              </div>
+            </section>
           </div>
         </div>
       </div>
