--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="movie-container">
-      <label>Pick a movie:</label>
+      <label class="pick-movie-text">Pick a movie</label>
       <select id="movie"></select>
     </div>
     <ul class="showcase">
