movie-booking app UI updated

--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="movie-container">
-      <label class="pick-movie-text">Pick a movie</label>
+      <label class="pick-movie-text">Pick a movie <i class="fas fa-level-down-alt"></i></label>
       <select id="movie"></select>
     </div>
     <ul class="showcase">
@@ -98,7 +98,7 @@
       </div>
     </div>
     <p class="text">
-      You have selected <span id="count">0</span> seats for a price of $<span
+      You have selected <span id="count">0</span> <span class="seats-text"> seats</span> for a price of $<span
         id="total">0</span>
     </p>
     <div class="book-btn-container">
