rock-paper-scissors scoreboard icons added

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -33,9 +33,16 @@
 					<p id="message">Who will win the game?</p>
 				</div>
 				<div class="scores">
-					<p class="total-score">Your score: <span id="user-score">0</span></p>
-					<p class="total-score">Computer's score: <span
-							id="computer-score">0</span></p>
+					<div class="score-box">
+						<div class="user">
+							<i class="fa-solid fa-user"></i>
+							<p id="user-score">0</p>
+						</div>
+						<div class="computer">
+							<i class="fa-solid fa-robot"></i>
+							<p id="computer-score">0</p>
+						</div>
+					</div>
 					<button id="reset-button">reset score</button>
 				</div>
 			</div>
