spotify-music app: listen on spotify functionality added

--- a/spotify-music/index.html
+++ b/spotify-music/index.html
@@ -34,7 +34,9 @@
     </div>
     <div class="spotify-container">
         <figure>
-            <img src="images/spotify.png" alt="Spotify" draggable="false">
+            <a href="https://google.com" id="spotify-link" target="_blank">
+                <img src="images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
+            </a>
         </figure>
     </div>
     <!-- Script -->
