todolist app functionality created

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -14,10 +14,8 @@
 	<body>
 		<h1>TO DO LIST</h1>
 		<form id="form">
-			<input type="text" class="input" placeholder="Enter Task" autocomplete="off">
+			<input type="text" class="input" id="input" placeholder="Enter Task" autocomplete="off">
 			<ul class="todos" id="todos">
-				<li>My first todo</li>
-				<li class="completed">My second todo</li>
 			</ul>
 		</form>
 		<p class="instructions">Left click to toggle completed. <br> Right click to
