todolist style updated

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -12,14 +12,16 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>TO DO LIST</h1>
-		<form id="form">
-			<input type="text" class="input" id="input" placeholder="Enter Task" autocomplete="off">
-			<ul class="todos" id="todos">
-			</ul>
-		</form>
-		<p class="instructions">Left click to toggle completed. <br> Right click to
-			delete tasks.</p>
+		<div class="wrapper">
+			<h1>TO DO LIST</h1>
+			<form id="form">
+				<input type="text" class="input" id="input" placeholder="Enter Task" autocomplete="off">
+				<ul class="todos" id="todos">
+				</ul>
+			</form>
+			<p class="instructions">Left click to toggle completed. <br> Right click to
+				delete tasks.</p>
+		</div>
 		<script src="app.js"></script>
 	</body>
 </html>
