todolist desktop and mobile instructions updated

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -19,8 +19,16 @@
 				<ul class="todos" id="todos">
 				</ul>
 			</form>
-			<p class="instructions">Left click to toggle completed. <br> Right click to
-				delete tasks.</p>
+			<p class="instructions">
+				<span class="desktop">
+					Left click to toggle completed. <br> Right click to
+					delete the task.
+				</span>
+				<span class="mobile">
+					Click to toggle completed. <br> Long press to
+					delete the task.
+				</span>
+			</p>
 		</div>
 		<script src="app.js"></script>
 	</body>
