spotify playlist link added

--- a/spotify-music/index.html
+++ b/spotify-music/index.html
@@ -35,7 +35,7 @@
     <div class="spotify-container">
         <div class="playlist-details">
             <p>Genre: <span class="genre" id="genre"></span></p>
-            <p>Playlist: <span class="playlist-name" id="playlist-name"></span></p>
+            <p>Playlist: <a href="#" target="_blank" id="playlist-link" title="View Playlist on Spotify"><span class="playlist-name" id="playlist-name"></span></a></p>
         </div>
         <div class="image-container">
             <a href="playlist.html" class="playlist-btn-link" title="Select Playlist">
